@@ -130,7 +130,7 @@ open_file (const char *fname, int *fdp)
 
 // XXX make translation-friendly
 
-template<class dwarf1, class dwarf2>
+template<class dwarf1, class dwarf2, bool print_all>
 struct talker : public dwarf_ref_tracker<dwarf1, dwarf2>
 {
   typedef dwarf_tracker_base<dwarf1, dwarf2> _base;
@@ -145,6 +145,7 @@ struct talker : public dwarf_ref_tracker<dwarf1, dwarf2>
   const typename dwarf1::debug_info_entry *a_;
   const typename dwarf2::debug_info_entry *b_;
   bool result_;
+  bool visiting_result_;
 
   inline talker ()
     : a_ (NULL), b_ (NULL), result_ (true)
@@ -158,12 +159,6 @@ struct talker : public dwarf_ref_tracker<dwarf1, dwarf2>
   {
   }
 
-  inline bool keep_going ()
-  {
-    result_ = false;
-    return verbose;
-  }
-
   inline ostream &location () const
   {
     return cout << hex << a_->offset () << " vs " << b_->offset () << ": ";
@@ -174,10 +169,33 @@ struct talker : public dwarf_ref_tracker<dwarf1, dwarf2>
   {
     a_ = &a;
     b_ = &b;
-    if (a.tag () != b.tag ())
+    visiting_result_ = a.tag () == b.tag ();
+    if (!visiting_result_)
       location () << dwarf::tags::name (a.tag ())
 		  << " vs "
 		  << dwarf::tags::name (b.tag ());
+  }
+
+  inline bool keep_going ()
+  {
+    result_ = visiting_result_ = false;
+    return print_all;
+  }
+
+  inline bool notice_match (typename subtracker::reference_match &matched,
+			    const die1 &a, const die2 &b, bool matches)
+  {
+    /* In the main walk, a mismatch would have gone to keep_going.
+       But in reference_match, the comparator uses a subtracker.
+       It won't have set visiting_result_, but it will return a
+       real non-matching result we can catch here.  */
+    if (!matches)
+      visiting_result_ = false;
+
+    // Record the real result in the cache, not a fake match for -l.
+    subtracker::notice_match (matched, a, b, visiting_result_);
+
+    return matches || keep_going ();
   }
 
   inline bool mismatch (cu1 &it1, const cu1 &end1,
@@ -259,8 +277,9 @@ struct talker : public dwarf_ref_tracker<dwarf1, dwarf2>
   inline void reference_mismatch (const die1 &ref1, const die2 &ref2)
   {
     subcomparator cmp (*(subtracker *) this);
-    if (cmp.equals (ref1, ref2))
-      cout << " (XXX refs now equal again!)";
+    if (cmp.equals (ref1, ref2) && !print_all)
+      cout << " (XXX refs now equal again!)"
+	   << (cmp.equals (*ref1, *ref2) ? "" : " (and not identical!!)");
     else if (cmp.equals (*ref1, *ref2))
       cout << " (identical but contexts mismatch)";
     else
@@ -293,16 +312,40 @@ struct quiet_cmp
   : public cmp<dwarf1, dwarf2, dwarf_ref_tracker<dwarf1, dwarf2> >
 {};
 
-// To be noisy, the talker wraps the standard tracker with verbosity hooks.
 template<class dwarf1, class dwarf2>
+static inline bool
+quiet_compare (const dwarf1 &a, const dwarf2 &b)
+{
+  return quiet_cmp<dwarf1, dwarf2> () (a, b);
+}
+
+// To be noisy, the talker wraps the standard tracker with verbosity hooks.
+template<class dwarf1, class dwarf2, bool print_all>
 struct noisy_cmp
-  : public cmp<dwarf1, dwarf2, talker<dwarf1, dwarf2> >
+  : public cmp<dwarf1, dwarf2, talker<dwarf1, dwarf2, print_all> >
 {
   inline bool operator () (const dwarf1 &a, const dwarf2 &b)
   {
     return equals (a, b) && this->_m_tracker.result_;
   }
 };
+
+
+template<class dwarf1, class dwarf2, bool print_all>
+static inline bool
+noisy_compare (const dwarf1 &a, const dwarf2 &b)
+{
+  return noisy_cmp<dwarf1, dwarf2, print_all> () (a, b);
+}
+
+template<class dwarf1, class dwarf2>
+static inline bool
+noisy_compare (const dwarf1 &a, const dwarf2 &b, bool print_all)
+{
+  return (print_all
+	  ? noisy_cmp<dwarf1, dwarf2, true> () (a, b)
+	  : noisy_cmp<dwarf1, dwarf2, false> () (a, b));
+}
 
 
 // Test that one comparison works as expected.
@@ -313,7 +356,7 @@ test_compare (const dwarf1 &file1, const dwarf2 &file2, bool expect)
   if (quiet_cmp<dwarf1, dwarf2> () (file1, file2) != expect)
     {
       if (expect)
-	noisy_cmp<dwarf1, dwarf2> () (file1, file2);
+	noisy_compare (file1, file2, true);
       throw std::logic_error (__PRETTY_FUNCTION__);
     }
 }
@@ -416,8 +459,8 @@ main (int argc, char *argv[])
       dwarf file2 (dw2);
 
       bool same = (quiet
-		   ? quiet_cmp<dwarf, dwarf> () (file1, file2)
-		   : noisy_cmp<dwarf, dwarf> () (file1, file2));
+		   ? quiet_compare (file1, file2)
+		   : noisy_compare (file1, file2, verbose));
 
       if (test_writer & 1)
 	test_output (file1, file2, false, file1, file2, same);
