@@ -1,3 +1,8 @@
+2009-08-25  Roland McGrath  <roland@redhat.com>
+
+	* dwarfcmp.cc (talker): Track real vs fake-positive match result
+	and cache only real results in the real tracker.
+
 2009-08-20  Roland McGrath  <roland@redhat.com>
 
 	* dwarfcmp.cc (verbose): New variable.
